Add blak pages and floating button

--- a/src/components/NavigationBar/NavigationBar.module.scss
+++ b/src/components/NavigationBar/NavigationBar.module.scss
@@ -1,5 +1,9 @@
-.NavigationBar {
+.Header {
   position: sticky;
+  top: 0;
+}
+
+.NavigationBar {
   display: flex;
   align-items: center;
   background-color: lightseagreen;
