--- a/src/containers/TodoForm/TodoForm.module.scss
+++ b/src/containers/TodoForm/TodoForm.module.scss
@@ -21,43 +21,15 @@
   }
 }
 
+.SubTaskContainer {
+  display: flex;
+  flex-direction: column;
+}
+
 .ButtonsContainer {
   display: flex;
   justify-content: space-evenly;
   margin-top: 1em;
-}
-
-.SubTaskContainer {
-  display: flex;
-  overflow: auto;
-  width: 290px;
-  scroll-snap-type: inline mandatory;
-}
-
-.SubTask {
-  position: relative;
-  padding: 20px;
-  margin: 10px;
-  border: 3px solid lightseagreen;
-  border-radius: 5px;
-  scroll-snap-align: center;
-  scroll-snap-stop: always;
-
-  & .DeleteButton {
-    position: absolute;
-    right: 20px;
-    bottom: 20px;
-    cursor: pointer;
-  }
-
-  &::after {
-    content: '';
-    display: block;
-    position: absolute;
-    right: -2rem;
-    width: 2rem;
-    height: 1px;
-  }
 }
 
 @media (min-width: 600px) {
