--- a/src/components/CreateTodoButton/CreateTodoButton.module.scss
+++ b/src/components/CreateTodoButton/CreateTodoButton.module.scss
@@ -11,6 +11,7 @@
   outline: none;
   background-position: center;
   transition: background 0.8s;
+  animation: showup 1s;
 
   &:hover {
     background: #26c1b9 radial-gradient(circle, transparent 1%, #2ad4cb 1%) center/15000%;
@@ -20,5 +21,20 @@
     background-color: #2ad4cb;
     background-size: 100%;
     transition: background 0s;
+  }
+
+  @keyframes showup {
+    0% {
+      transform: scale(0.1);
+    }
+    25% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.25);
+    }
+    100% {
+      transform: scale(1);
+    }
   }
 }
