Make TodoListItem clickable
Note:
On item click a navigation will happen to the corresponding element.
Although the route itself is not handled yet.

--- a/src/components/TodoList/TodoListItem/TodoListItem.module.scss
+++ b/src/components/TodoList/TodoListItem/TodoListItem.module.scss
@@ -4,6 +4,13 @@
   border: 5px solid lightseagreen;
   border-radius: 5px;
   cursor: pointer;
+  transition: box-shadow 0.3s ease;
+
+  &:focus,
+  &:hover {
+    outline: none;
+    box-shadow: 6px 6px 1px #ccc;
+  }
 }
 
 .Header {
