Use twemoji icons instead of the op-system's default ones
Note: Emoji implementation differs by op-system and it could look like
really broken in for e.g. on Android Chrome. That is the reason behinde
why I switch to twemoji.

--- a/src/containers/NavigationBar/NavigationBar.module.scss
+++ b/src/containers/NavigationBar/NavigationBar.module.scss
@@ -11,19 +11,22 @@
   height: 3em;
 
   & > * {
-    margin: 0 0.5em;
+    margin: 0 1.5em;
   }
 }
 
 .Icon {
   height: 100%;
-  padding: 0 1em;
+  width: 1.5em;
+  padding-right: 0.5em;
   display: flex;
   align-items: center;
   cursor: pointer;
 }
 
 .AppTitle {
+  display: flex;
+  align-items: center;
   margin-left: auto;
   text-decoration: none;
   color: white;
