--- a/src/components/Buttons/CreateTodoButton/CreateTodoButton.module.scss
+++ b/src/components/Buttons/CreateTodoButton/CreateTodoButton.module.scss
@@ -5,21 +5,20 @@
   bottom: 2em;
   width: 5em;
   height: 5em;
+  border: 3px solid lightseagreen;
   border-radius: 50%;
-  background-color: lightseagreen;
-  border-style: none;
+  background-color: #fff;
   outline: none;
-  background-position: center;
-  transition: background 0.8s;
-  animation: showup 0.5s;
+  transition: box-shadow 0.3s ease;
 
-  &:hover {
-    background: #26c1b9 radial-gradient(circle, transparent 1%, #2ad4cb 1%) center/15000%;
+  &:hover,
+  &:active,
+  &:focus {
+    box-shadow: 0px 3px 0px 1px #ccc;
   }
+}
 
-  &:active {
-    background-color: #2ad4cb;
-    background-size: 100%;
-    transition: background 0s;
-  }
+.Icon {
+  height: 100%;
+  width: 2em;
 }
