--- a/src/components/TodoForm/SubTask/SubTask.module.scss
+++ b/src/components/TodoForm/SubTask/SubTask.module.scss
@@ -8,6 +8,9 @@
   scroll-snap-stop: always;
 
   & .DeleteButton {
+    display: flex;
+    background-color: transparent;
+    border: none;
     position: absolute;
     right: 20px;
     bottom: 20px;
