--- a/src/components/TodoList/TodoListItem/TodoListItem.module.scss
+++ b/src/components/TodoList/TodoListItem/TodoListItem.module.scss
@@ -30,7 +30,7 @@
   white-space: nowrap;
 
   & > * {
-    margin-left: 10px;
+    margin: auto 10px auto 0;
   }
 
   & > :first-child {
@@ -47,12 +47,18 @@
 }
 
 .SubTask {
+  display: flex;
+  align-items: center;
   margin: 10px 0;
   background: turquoise;
   border-radius: 5px;
   padding: 5px;
   font-weight: 500;
   white-space: nowrap;
+
+  & > :last-child {
+    padding-left: 4px;
+  }
 }
 
 @media (min-width: 600px) {
