--- a/src/features/todoList/TodoListItem.module.scss
+++ b/src/features/todoList/TodoListItem.module.scss
@@ -18,6 +18,10 @@
   flex-wrap: wrap;
   justify-content: space-between;
   font-size: 1.5em;
+
+  & > * {
+    margin-bottom: 5px;
+  }
 }
 
 .HeaderTitle {
@@ -30,11 +34,11 @@
   white-space: nowrap;
 
   & > * {
-    margin: auto 10px auto 0;
+    margin: auto 0 auto 10px;
   }
 
   & > :first-child {
-    margin-left: 0px;
+    margin-left: 0;
   }
 }
 
